# myobotanica

./: .gitignore  README.md  classes.md  classes.mmd  main.py  packages.md  packages.mmd  requirements.txt
Arduino_Code/main/: main.ino
GCS/: drone_ground_station.py
GCS_old/: drone_ground_station.py  gcs_gui.py
RPi Code/: arduino_controller.py  main.py
RPi_Code/: Build DroneKit for ARM.txt  Useful Command Line.txt  arduino_controller.py  command_receiver.py  flight_controller.py  main.py  pyproject.toml
RPi_Code/src/: directoryStructure.txt
RPi_Code/src/flightComputer/: __main__.py  config.py  sanity_test.py
RPi_Code/src/flightComputer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
RPi_Code/src/flightComputer/autonomy/: mission.py
RPi_Code/src/flightComputer/fc/: __init__.py  mav_iface.py  mavlink_fc.py  mavsdk_fc.py  quad.parm  quad_indoor.parm  sitl.py
RPi_Code/src/flightComputer/io/: __init__.py  arduino.py  radio.py  serial_link.py
RPi_Code/src/flightComputer/routing/: bus.py  dispatcher.py  handlers.py
RPi_Code/src/flightComputer/util/: log.py
config/: settings.yml
gcs/: cli.py  comms.py  directoryStructure.txt  gui.py  menu.py  spec.py
matlab-myo-stuff/: myo_listener.py  myo_train.mlx  robo_arm.py
src/: orchestrator.py
src/classifier/: __init__.py  classifier.py
src/drone/: __init__.py  arm.py  drone.py
src/drone_arm/: __init__.py  drone_arm.py
src/kinematics/: __init__.py  forward.py  inverse.py
src/sensors/: __init__.py  kinect.py  kinnect.py  myo_listener.py  myo_udp.py  myoband.py
(+4 files in other folders)
