[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flightComputer"
version = "0.1.0"
dependencies = ["pyserial>=3.5", "dronekit", "pymavlink"]

[project.scripts]
flightComputer = "flightComputer.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]        # <── src‑layout directive
